Add tooltip to the balance column of the general ledger view

For investment accounts, the securities units are displayed in
the balance column, otherwise the account balance. To give the
user a hint, a corresponding tooltip is now displayed.

BUG:497144
FIXED-IN:5.2